<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/add_income_input_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/adapter_height"
        android:paddingStart="@dimen/margin_ten"
        android:paddingEnd="@dimen/margin_ten"
        android:background="@drawable/login_et_bg"
        android:textSize="14sp"
        android:hint="@string/hint_income_type"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divide_height"
        android:background="@color/divide_line"/>

    <EditText
        android:id="@+id/add_income_input_payer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/adapter_height"
        android:paddingStart="@dimen/margin_ten"
        android:paddingEnd="@dimen/margin_ten"
        android:background="@drawable/login_et_bg"
        android:textSize="14sp"
        android:hint="@string/hint_income_payer"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divide_height"
        android:background="@color/divide_line"/>

    <EditText
        android:id="@+id/add_income_input_money"
        android:layout_width="match_parent"
        android:layout_height="@dimen/adapter_height"
        android:paddingStart="@dimen/margin_ten"
        android:paddingEnd="@dimen/margin_ten"
        android:background="@drawable/login_et_bg"
        android:inputType="number"
        android:textSize="14sp"
        android:hint="@string/hint_income_money"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divide_height"
        android:background="@color/divide_line"/>

    <EditText
        android:id="@+id/add_income_input_datetime"
        android:layout_width="match_parent"
        android:layout_height="@dimen/adapter_height"
        android:paddingStart="@dimen/margin_ten"
        android:paddingEnd="@dimen/margin_ten"
        android:background="@drawable/login_et_bg"
        android:textSize="14sp"
        android:inputType="datetime"
        android:hint="@string/hint_income_datetime"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divide_height"
        android:background="@color/divide_line"/>

    <EditText
        android:id="@+id/add_income_input_description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/adapter_height"
        android:paddingStart="@dimen/margin_ten"
        android:paddingEnd="@dimen/margin_ten"
        android:background="@drawable/login_et_bg"
        android:textSize="14sp"
        android:lines="20"
        android:gravity="top|start"
        android:paddingTop="@dimen/margin_ten"
        android:hint="@string/hint_income_description"/>

</LinearLayout>