<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolBar_height"
        android:background="@color/colorPrimary"
        android:windowSoftInputMode="adjustResize"
        android:gravity="top">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            style="@style/toolBar_title"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/modify_password_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            style="@style/toolBar_button"
            android:text="@string/modify_btn_title"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin">
        <EditText
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:background="@drawable/login_et_bg"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textSize="@dimen/login_font_size" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divide_height"
            android:background="@color/divide_line"/>
        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:background="@drawable/login_et_bg"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textSize="@dimen/login_font_size" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divide_height"
            android:background="@color/divide_line"/>
    </LinearLayout>

</LinearLayout>